# window-sizer

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  README.md  calculations.py  config.py  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/workflows/: release.yml
database/: config.py
docs/: DATABASE_ARCHITECTURE.md  database_schema.md  pdf_export_plan.md  todo.md
models/: database.py
services/: database_service.py
templates/: pdf_template.html
tests/: test_calculations.py
