[project]
name = "window"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.17.0",
    "jinja2",
    "weasyprint>=65.1",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
]
